Trying to fix navigation bar covering content in mobille

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,12 @@
 .navbar {
 	margin-bottom: 0;
+  z-index: 25;
+
+  /*This fixes the navigation bar to the screen*/
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 25;
+
 }
 
 body {
@@ -16,7 +19,7 @@ body {
 /*Fix padding for mobile*/
 @media (max-width: 979px) {
   body {
-    padding-top: 0px;
+    padding-top: 50px;
   }
 }
 
